[package]
name = "bevyroids"
version = "0.1.1"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.11.3"
bevy_prototype_lyon = "0.9.0"
derive_more = "0.99.17"
rand = { version = "0.8.5", features = ["small_rng"] }
